--- a/parte_5/ejem4-haproxy/Dockerfile
+++ b/parte_5/ejem4-haproxy/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /src
 RUN mvn package -DskipTests
 
 FROM openjdk:8-jre
-COPY --from=builder /src/target/ejemplo-haproxy-0.1.0-SNAPSHOT.jar /
-CMD ["java", "-jar", "ejemplo-haproxy-0.1.0-SNAPSHOT.jar"] 
+COPY --from=builder /src/target/ejemplo-haproxy-0.2.0.jar /
+CMD ["java", "-jar", "ejemplo-haproxy-0.2.0.jar"] 
