--- a/parte_5/ejem4-haproxy/pom.xml
+++ b/parte_5/ejem4-haproxy/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>es.sidelab</groupId>
 	<artifactId>ejemplo-haproxy</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>ejemplohaproxy</name>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.2.RELEASE</version>
+		<version>2.4.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
