--- a/parte_5/ejem4b-haproxy-ssl-passthrough/docker-compose.yml
+++ b/parte_5/ejem4b-haproxy-ssl-passthrough/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     image: haproxy:2.7.3
     ports:
       - "9443:443" # Only service that is exposed to the host is the lb
-      - "9080:8080"
-      - "9090:80" 
+      - "9080:8080" # Haproxy Stats
+      - "9090:80" # http (should not work)
     volumes:
       - "./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro"
     restart: unless-stopped
