Comment haproxy configurations for parte_5 samples

--- a/parte_5/ejem4-haproxy/haproxy-ssl.cfg
+++ b/parte_5/ejem4-haproxy/haproxy-ssl.cfg
@@ -1,6 +1,7 @@
-# This configuration is a simplified example of how to use ssl on front
-# and backends with additional certificates loaded from a directory for SNI
-# capable clients.
+# This configuration is a simplified example of how to use SSL Termination with ssl (https) on front (haproxy) with haproxy certificates loaded from a directory,
+# and plain http backends (web application does not have https enabled)
+# The example provides a statistics page on /stats?admin.
+# No load balancing mode is specified, therefore http (level 7) is used by default.
 
 global
 	maxconn 100
@@ -12,17 +13,13 @@ defaults
 	timeout server 5s
 
 frontend myfrontend
-	# primary cert is /etc/cert/server.pem
-	# /etc/cert/certdir/ contains additional certificates for SNI clients
+	# certificates generated with generate-self-signed-cert.sh
 	bind :443 ssl crt /etc/cert/server.pem
-	#bind :80
-	default_backend mybackend
+	default_backend mybac`kend
 
 backend mybackend
-	# a http backend
+	# a http backend (no ssl)
 	server s1 web:8080
-	# a https backend
-	# server s4 10.0.0.3:443 ssl verify none
 	stats enable
     stats hide-version
     stats scope   .
