--- a/parte_5/ejem4-haproxy/haproxy.cfg
+++ b/parte_5/ejem4-haproxy/haproxy.cfg
@@ -1,6 +1,9 @@
-# This configuration is a simplified example of how to use ssl on front
-# and backends with additional certificates loaded from a directory for SNI
-# capable clients.
+# This configuration is a simplified example of how to use haproxy for
+# load balancing with plain http connections to the frontend (haproxy) and backend
+# (web app)
+# Statistics page is available at /admin?stats
+# No load balancing mode is specified, therefore http (level 7) is used by default.
+
 
 global
 	maxconn 100
@@ -8,21 +11,15 @@ global
 defaults
 	mode http
 	timeout connect 5s
-	timeout client 5s
+	timeout client ssl5s
 	timeout server 5s
 
 frontend myfrontend
-	# primary cert is /etc/cert/server.pem
-	# /etc/cert/certdir/ contains additional certificates for SNI clients
-	# bind :443 ssl crt /etc/cert/server.pem crt /etc/cert/certdir/
 	bind :80
 	default_backend mybackend
 
 backend mybackend
-	# a http backend
 	server s1 web:8080
-	# a https backend
-	# server s4 10.0.0.3:443 ssl verify none
 	stats enable
     stats hide-version
     stats scope   .
