--- a/parte_5/ejem4b-haproxy-ssl-passthrough/haproxy.cfg
+++ b/parte_5/ejem4b-haproxy-ssl-passthrough/haproxy.cfg
@@ -1,6 +1,7 @@
-# This configuration is a simplified example of how to use ssl on front
-# and backends with additional certificates loaded from a directory for SNI
-# capable clients.
+# This configuration is a simplified example of how to use haproxy with
+# SSL Passthrough. A load balancing mode tcp (level 4) is used.
+# The frontend connection (haproxy) uses ssl (https), as well as the 
+# backend (web app)
 
 global
 	maxconn 100
@@ -16,12 +17,17 @@ listen stats
     
 frontend myfrontend
 	bind :443
+	# We specify a level 4 load balancing (tcp)
 	mode tcp
 	option tcplog
 	tcp-request content accept if { req_ssl_hello_type 1 }
 	default_backend mybackend
 
 backend mybackend
+	# We specify a level 4 load balancing (tcp)
 	mode tcp
 	option log-health-checks
+	# A server that uses ssl (https). The "verify none" directive is used
+	# to avoid checking the validity of the certificate (which would fail as
+	# it is a self-signed certificate)
 	server s1 web:8443 check verify none
