--- a/parte_5/ejem4-haproxy/haproxy.cfg
+++ b/parte_5/ejem4-haproxy/haproxy.cfg
@@ -11,7 +11,7 @@ global
 defaults
 	mode http
 	timeout connect 5s
-	timeout client ssl5s
+	timeout client 5s
 	timeout server 5s
 
 frontend myfrontend
@@ -19,7 +19,8 @@ frontend myfrontend
 	default_backend mybackend
 
 backend mybackend
-	server s1 web:8080
+	server s1 ejem4-haproxy-web-1:8080 check
+	server s2 ejem4-haproxy-web-2:8080 check
 	stats enable
     stats hide-version
     stats scope   .
