--- a/parte_5/ejem4-haproxy/docker-compose.yml
+++ b/parte_5/ejem4-haproxy/docker-compose.yml
@@ -8,7 +8,10 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/test
     links:
       - db
-    restart: unless-stopped # Restart the container. Necessary to avoid problems if the app starts before the db is ready 
+    restart: unless-stopped # Restart the container. Necessary to avoid problems if the app starts before the db is ready
+    deploy:
+      mode: loadbalancer
+      replicas: 2
   db:
     image: mysql:8
     environment:
