--- a/parte_5/ejem4-haproxy/haproxy-ssl.cfg
+++ b/parte_5/ejem4-haproxy/haproxy-ssl.cfg
@@ -15,11 +15,12 @@ defaults
 frontend myfrontend
 	# certificates generated with generate-self-signed-cert.sh
 	bind :443 ssl crt /etc/cert/server.pem
-	default_backend mybac`kend
+	default_backend mybackend
 
 backend mybackend
 	# a http backend (no ssl)
-	server s1 web:8080
+	server s1 ejem4-haproxy-web-1:8080 check
+	server s2 ejem4-haproxy-web-2:8080 check
 	stats enable
     stats hide-version
     stats scope   .
