--- a/proyectos_de_ejemplo/sample-project-phase4/web/src/main/resources/application.properties
+++ b/proyectos_de_ejemplo/sample-project-phase4/web/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mustache.suffix=.html
 spring.datasource.url=jdbc:mysql://localhost/books
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
