Update haproxy to use StickySessions + fix error on launch multiple intances

--- a/proyectos_de_ejemplo/sample-project-phase4/haproxy.cfg
+++ b/proyectos_de_ejemplo/sample-project-phase4/haproxy.cfg
@@ -23,9 +23,11 @@ frontend myfrontend
 
 backend web
 	mode tcp
+	balance roundrobin
+	cookie SERVER insert indirect nocache
 	option log-health-checks
-	server s1 sample-project-phase4-web-1:8443 check verify none
-	server s2 sample-project-phase4-web-2:8443 check verify none
+	server web1 sample-project-phase4-web-1:8443 check cookie web1
+	server web2 sample-project-phase4-web-2:8443 check cookie web2
 
 frontend restfrontend
 	bind :8080
