--- a/parte_3/tema_3_protocolos/comunicacion-grpc-ejem1/pom.xml
+++ b/parte_3/tema_3_protocolos/comunicacion-grpc-ejem1/pom.xml
@@ -11,7 +11,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.source>17</maven.compiler.source>
-		<io.grpc.version>1.42.1</io.grpc.version>
+		<protobuf.version>3.23.4</protobuf.version>
+		<grpc.version>1.58.0</grpc.version>
 		<os-maven-plugin.version>1.7.0</os-maven-plugin.version>
 		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
 	</properties>
@@ -20,22 +21,22 @@
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-netty</artifactId>
-			<version>${io.grpc.version}</version>
+			<version>${grpc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-protobuf</artifactId>
-			<version>${io.grpc.version}</version>
+			<version>${grpc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-stub</artifactId>
-			<version>${io.grpc.version}</version>
+			<version>${grpc.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>1.3.5</version>
 		</dependency>
 	</dependencies>
 
@@ -54,11 +55,11 @@
 				<version>${protobuf-maven-plugin.version}</version>
 				<configuration>
 					<protocArtifact>
-						com.google.protobuf:protoc:3.10.0:exe:${os.detected.classifier}
+						com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
 					</protocArtifact>
 					<pluginId>grpc-java</pluginId>
 					<pluginArtifact>
-						io.grpc:protoc-gen-grpc-java:1.25.0:exe:${os.detected.classifier}
+						io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
 					</pluginArtifact>
 				</configuration>
 				<executions>
