--- a/parte_3/tema_3_protocolos/comunicacion-grpc-ejem2-interface/pom.xml
+++ b/parte_3/tema_3_protocolos/comunicacion-grpc-ejem2-interface/pom.xml
@@ -11,25 +11,28 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.source>17</maven.compiler.source>
-		<os-maven-plugin.version>1.6.2</os-maven-plugin.version>
-		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+        <protobuf.version>3.23.4</protobuf.version>
+        <grpc.version>1.58.0</grpc.version>
+		<os-maven-plugin.version>1.7.0</os-maven-plugin.version>
+        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
 	</properties>
 
 	<dependencies>
 		 <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>1.42.1</version>
+            <version>${grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>1.42.1</version>
+            <version>${grpc.version}</version>
         </dependency>
         <dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>1.3.5</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
@@ -48,11 +51,11 @@
 				<version>${protobuf-maven-plugin.version}</version>
 				<configuration>
 					<protocArtifact>
-						com.google.protobuf:protoc:3.10.0:exe:${os.detected.classifier}
+						com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
 					</protocArtifact>
 					<pluginId>grpc-java</pluginId>
 					<pluginArtifact>
-						io.grpc:protoc-gen-grpc-java:1.25.0:exe:${os.detected.classifier}
+						io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
 					</pluginArtifact>
 				</configuration>
 				<executions>
