--- a/parte_3/tema_3_protocolos/comunicacion-grpc-ejem2-server/pom.xml
+++ b/parte_3/tema_3_protocolos/comunicacion-grpc-ejem2-server/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>net.devh</groupId>
 			<artifactId>grpc-spring-boot-starter</artifactId>
-			<version>2.13.0.RELEASE</version>
+			<version>2.15.0.RELEASE</version>
 		</dependency>
 		<dependency>
             <groupId>es.codeurjc.mastercloudapps</groupId>
@@ -25,9 +25,9 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>1.3.5</version>
 		</dependency>
 	</dependencies>
 
