--- a/parte_4/tema_4.3/ingress/ingress-host.yaml
+++ b/parte_4/tema_4.3/ingress/ingress-host.yaml
@@ -4,7 +4,8 @@ metadata:
   name: mastercloudapps
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-spec:  
+spec:
+  ingressClassName: nginx
   rules:
    - host: www.mastercloudapps.com
      http:
@@ -17,7 +18,7 @@ spec:
             port:
               number: 5000      
       - path: /webappanuncios/(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: webappanuncios
