--- a/parte_4/tema_4.3/ingress/ingress.yaml
+++ b/parte_4/tema_4.3/ingress/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:  
+  ingressClassName: nginx
   rules:
    - http:
       paths:
@@ -16,7 +17,7 @@ spec:
             port:
               number: 5000      
       - path: /webappanuncios/(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: webappanuncios
