--- a/parte_4/tema_4.3/ingress/webappanuncios/webappanuncios-ingress.yaml
+++ b/parte_4/tema_4.3/ingress/webappanuncios/webappanuncios-ingress.yaml
@@ -4,12 +4,13 @@ metadata:
   name: webappanuncios
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-spec:  
+spec:
+  ingressClassName: nginx
   rules:
    - http:
       paths:
       - path: /webappanuncios/(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: webappanuncios
