--- a/parte_4/tema_4.3/ingress/webgatos/webgatos-ingress.yaml
+++ b/parte_4/tema_4.3/ingress/webgatos/webgatos-ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: webgatos
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-spec:  
+spec:
+  ingressClassName: nginx
   rules:
    - http:
       paths:
